--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,11 @@ button:hover {
     transition: .3s ease;
 
 }
+h2 {
+    font-size: 1.6rem;
+    font-weight: 300;
+    letter-spacing: 1.5px;
+}
 
 .topbar {
     max-width: 1140px;
@@ -100,4 +105,48 @@ main {
 }
 .intro h2 {
     margin-bottom: 20px;
+}
+
+
+.info {
+    background-color: var(--white);
+    text-align: center;
+    padding: 60px 0;
+}
+.info .row:first-child {
+    padding: 0 200px 40px 200px;
+}
+.info .row:last-child {
+    display: flex;
+}
+.info .row:last-child div {
+    border-right: 1px solid grey;
+    flex: 1;
+    padding: 10px;
+}
+.info .row:last-child div:last-child {
+    border-right: none;
+}
+.info i {
+    font-size: 2rem;
+    border: 1px solid var(--gray);
+    padding: 20px;
+    border-radius: 50%;
+    margin-bottom: 20px;
+}
+.info .fa-camera-retro {
+    color: var(--lightGreen);
+}
+.info .fa-envelope {
+    color: var(--darkGreen);
+}
+.info .fa-phone {
+    color: var(--blue);
+}
+.info h4 {
+    margin-bottom: 8px;
+    font-size: 1.2rem;
+}
+.info h2 {
+    margin-bottom: 15px;
 }
