--- a/css/style.css
+++ b/css/style.css
@@ -193,3 +193,33 @@ main {
 .programs button:hover {
     background: var(--lightGreen);
 }
+
+footer {
+    text-align: center;
+    background: var(--darkGreen);
+    padding: var(--py);
+    color: white;
+}
+footer input {
+    padding: 10px;
+    font-size: 1rem;
+    border: none;
+    margin-top: 20px;
+}
+footer input[type="email"] {
+    border-radius: 30px 0 0 30px;
+}
+footer input[type="submit"] {
+    border-radius: 0 30px 30px 0;
+    position: relative;
+    left: -4px;
+    background: var(--lightGreen);
+}
+footer input[type="submit"]:hover {
+    background: var(--blue);
+    cursor: pointer;
+    transition: var(--transition);
+}
+footer h2 {
+    margin-bottom: 15px;
+}
